2011-02-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	test defs: add subroutine for input unindenting
	* tests/defs.in (unindent): New subroutine.

2011-02-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	python: report the 'PYTHON' influential environment variable
	* m4/python.m4 (AM_PATH_PYTHON): Call AC_ARG_VAR on PYTHON.
	* doc/automake.texi (Python): Update and extend.
	* tests/help-python.test: New test.
	* tests/Makefile.am (TESTS): Update.
	* THANKS (Jack Kelly): Update e-mail address.
	Suggestion by Jack Kelly.

2011-02-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: clear TESTS_ENVIRONMENT variable
	* tests/defs.in (TESTS_ENVIRONMENT): Unset it, so that values
	from environment won't interfere with the testcases.
	Suggestion by Ralf Wildenhues.

2011-02-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: tweak few tests on simple and parallel test drivers
	* tests/check-exported-srcdir.test: Improve heading comments.
	* tests/check-tests-in-builddir.test: Likewise.  Also, unset the
	`FOO_EXIT_STATUS' variable, so that any pre-existing value in the
	environment won't risk to interfere with the test.
	Suggestions by Ralf Wildenhues.

2011-02-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: more tests on simple and parallel test drivers
	* tests/parallel-tests-subdir.test: New test.
	* tests/check-exported-srcdir.test: Likewise.
	* tests/check-tests-in-builddir.test: Likewise.
	* tests/check-tests_environment.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2011-01-29  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failures in lflags*.test
	* tests/lflags.test: Remove 'LEX' from the environment, so
	that it won't be erroneously picked up by `make -e'.
	* tests/lflags2.test: Likewise.

2011-01-24  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: color-tests issues with parallel make