@@ -1,3 +1,14 @@
+2011-02-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: tempdirs with restrictive permissions are cleaned correctly
+	Before this change, the removal of a temporary test directory
+	containing subdirectories with restrictive permissions (such as
+	'r--r--r--') could fail.
+	* tests/defs: Ensure that all the subdirectories of a temporary
+	test directory have the 'read', 'write' and 'execute' bits set,
+	before trying to remove it with `rm -rf'.
+	* tests/Makefile.am (clean-local-check): Likewise.
+
 2011-02-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
